Add type module to package.json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "main": "index.js",
   "types": "index.d.ts",
+  "type": "module",
   "license": "MIT",
   "files": [
     "package.json",
